Added additional pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         color:rgb(0, 0, 255)
                 
 
-            }
     </style>
 <title>All about me</title>
 </head>
@@ -64,7 +63,7 @@
     vollyball. I also played tennis before and am ok. </p>
     <img src="5-lionel-messi-record-world-cup.webp" width="400">
     <img src="23GZWMG7-100012.JPG" width="200" >
-<ul>
+    <ul>
     
     <li>My favorite NFL team are the Washington Commanders</li>
     <li>My favorite NBA team are the Brooklyn Nets</li>
@@ -90,5 +89,6 @@ Some memories we all have was when we went to 2 soccer games. They were preseaso
 There was a cool beach that had very nice waves. While the wave was coming at us we would jump over it. My mom did not like it so she just watched me,Noah and my dad do it. It was awesome!</p>
 </body>
 </html>
-<img src="360_F_337359367_bPv2a3OfB0HIZX3RUyvkCIgCqD5oR4ft.jpg" width="300">
-<img src="waves-of-poster.jpg"width="400">
+<a href="Mom.html">This is all about my mom!</a>
+<a href="Dad.html">This is all about my dad!</a>
+<a href="Noah.html">This is all about my brother!</a>
