Nathan's 3rd commit

--- a/Dad.html
+++ b/Dad.html
@@ -3,12 +3,17 @@
     
 </html>
 <head>
-
+<style>
+    p{
+        color:red
+    }
+</style>
 </head> 
 <meta name="viewport"
 <title><h1>My dad!</h1></title>
 <p>My dad is fun. He likes soccer. His favorite team is Liverpool.His favorite athlete is Haile Gebrselassie.
-    One fact about him is that he was one of the only people that were able to go to a collage in Ethiopia
+    He enjoys sports like me(But not as much sports)and is the best chess player in the house by FARRRRRRRRRR
+    . One fact about him is that he was one of the only people that were able to go to a collage in Ethiopia
     .He loves to learn</p>
 <style>
     p{
