--- a/Mom.html
+++ b/Mom.html
@@ -3,14 +3,21 @@
     
 </html>
 <head>
-
+<style>
+    p {
+        color: rgb(255, 117, 140) 
+    } 
+    h1{
+        color:darkcyan
+    }
+</style>
 </head> 
 <meta name="viewport"
 <title><h1>My Mom!</h1></title>
 <p>This is about my Mom. She is a hard worker. She gets up every day at 5:00 just to make breakfast. 
     My mom's favorite athlete is Kobe Bryant.(RIP Kobe. We miss you)She is a great cook. That is great
     because my dad can not cook. Some foods she makes are injera,hot dogs,Chicken nuggets and more.
-    </p>
+    My favorite is genfo. We only eat it on big holidays like christmas and others.</p>
 <style>
     p{
     font-size:20px;
