--- a/Noah.html
+++ b/Noah.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-    
+    <styles>
+    </styles>
 </html>
 <head>
 
 </head> 
 <meta name="viewport"
 <title><h1>My brother!</h1></title>
-<p>My brother's name is Noah. He is annoying sometimes. He is very smart. His favorite team is
-    Liverpool. He plays center midfelder. He is fast but and skiny. His favorite soccer player
-    is Lionel Messi.
+<p>My brother's name is Noah. He is annoying sometimes.(No ALL the time) He is very smart. His favorite team is
+    Liverpool. He plays center midfelder in his favorite sport:soccer. He is fast but and skiny. His favorite soccer player
+    is Lionel Messi.(The GOAT)Like me he also enjoys football,NBA and others. His favorite video game is called FIFA mobile.
 </p>
 <style>
     p{
@@ -17,3 +18,4 @@
     }
 </style>
 <img src="23GZMNQ6-100012 (1).JPG" width="200">
+<img src="download (3).jpg" width="200">
